<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewmodel"
            type="com.bbo.mobiledevexam.presentation.screens.checkout.CheckoutViewModel" />

        <variable
            name="customFont"
            type="com.bbo.mobiledevexam.model.CustomFont" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.screens.checkout.CheckoutFragment">

        <TextView
            android:id="@+id/text_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/text_screen_checkout_title"
            style="@style/Product_Screen_Title"
            setCustomFont="@{customFont.MontserratExtraBold}" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.1"/>

        <LinearLayout
            android:id="@+id/container_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="@dimen/dimens_25dp"
            android:layout_marginEnd="@dimen/dimens_25dp"
            app:layout_constraintTop_toBottomOf="@id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_name"
                android:textSize="@dimen/dimens_12sp"
                android:textColor="@color/black"
                setCustomFont="@{ customFont.MontserratExtraBold }"
                app:layout_constraintTop_toBottomOf="@id/guideline"
                app:layout_constraintStart_toStartOf="parent"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimens_16dp"
                android:background="@drawable/checkout_edittext_bg"
                android:hint="@string/hint_name"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:text="@={viewmodel.editTextName}"
                android:paddingStart="@dimen/dimens_16dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_email"
                android:textSize="@dimen/dimens_12sp"
                android:textColor="@color/black"
                setCustomFont="@{ customFont.MontserratExtraBold }"
                android:layout_marginTop="@dimen/dimens_25dp"
                app:layout_constraintTop_toBottomOf="@id/guideline"
                app:layout_constraintStart_toStartOf="parent"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/checkout_edittext_bg"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:imeOptions="actionDone"
                android:paddingStart="@dimen/dimens_16dp"
                android:text="@={viewmodel.editTextEmail}"
                android:layout_marginTop="@dimen/dimens_16dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/container_tac"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/container_input"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="@dimen/dimens_25dp"
            android:layout_marginStart="@dimen/dimens_25dp"
            android:layout_marginEnd="@dimen/dimens_25dp">

            <Switch
                android:id="@+id/switch_tac"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:thumb="@drawable/switch_thumb"
                android:track="@drawable/switch_custom_track"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_tac"
                android:textSize="@dimen/dimens_12sp"
                android:textColor="@color/black"
                android:layout_marginStart="@dimen/dimens_15dp"
                setCustomFont="@{ customFont.MontserratExtraBold }" />

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimens_25dp"
            android:layout_marginStart="@dimen/dimens_25dp"
            android:layout_marginEnd="@dimen/dimens_25dp"
            android:onClick="@{() -> viewmodel.onPay()}"
            app:layout_constraintTop_toBottomOf="@+id/container_tac">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="fitXY"
                android:src="@drawable/checkout_button"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{ viewmodel.textSum }"
                android:textSize="@dimen/dimens_21sp"
                android:textColor="@color/white"
                android:layout_marginStart="@dimen/dimens_15dp"
                setCustomFont="@{ customFont.MontserratExtraBold }"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>