<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewmodel"
            type="com.bbo.mobiledevexam.presentation.screens.order.OrderViewModel" />

        <variable
            name="customFont"
            type="com.bbo.mobiledevexam.model.CustomFont" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.screens.order.OrderFragment">

        <TextView
            android:id="@+id/text_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/text_screen_confirmation_title"
            style="@style/Product_Screen_Title"
            setCustomFont="@{customFont.MontserratExtraBold}" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.1"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:padding="@dimen/dimens_25dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/container_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_outline_order_confirmation"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:paddingStart="2dp"
                android:paddingTop="2dp"
                android:paddingEnd="@dimen/dimens_2dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scaleType="fitXY"
                    android:src="@drawable/bg_confirmation"
                    android:paddingBottom="@dimen/dimens_13dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    />

                <LinearLayout
                    android:id="@+id/message_container"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/dimens_16dp"
                    android:background="@drawable/bg_message_container"
                    android:layout_marginBottom="@dimen/dimens_13dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">

                    <TextView
                        android:id="@+id/text_message"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/text_order_complete_message"
                        android:textSize="21sp"
                        android:textColor="@color/black"
                        setCustomFont="@{customFont.MontserratBold}"/>

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dimens_16dp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Your Order ID is #102022"
                        android:textSize="@dimen/dimens_17sp"/>

                </LinearLayout>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_star_confirmation"
                    android:layout_marginEnd="@dimen/dimens_16dp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintVertical_bias="0.25"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@id/message_container"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="@{() -> viewmodel.onClickReturnToProducts()}"
                android:layout_marginTop="@dimen/dimens_25dp"
                app:layout_constraintTop_toBottomOf="@+id/container_message">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scaleType="fitXY"
                    android:src="@drawable/bg_confirmation_button"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_return_to_product"
                    android:textSize="@dimen/dimens_21sp"
                    android:textColor="@color/white"
                    android:layout_marginStart="@dimen/dimens_15dp"
                    setCustomFont="@{ customFont.MontserratExtraBold }"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>